# bioutils

./: .coveragerc  .git-blame-ignore-revs  .gitignore  .hgignore  .hgtags  .readthedocs.yml  .travis.yml  CONTRIBUTORS.txt  Makefile  README.md  README.rst  circle.yml  mkdocs.yml  pyproject.toml  pytest.ini  setup.cfg  setup.py  tox.ini
.github/: stale.yml
.github/workflows/: python-package.yml
bioutils/: __init__.py  _identifiersdotorg.py  _versionwarning.py  accessions.py  accessions2.py  assemblies.py  assembly.py  coordinates.py  cytobands.py  digest.py  digests.py  outlinks.py  seqfetcher.py  sequences.py  truncated_digest.py  vmc_digest.py
bioutils/_data/assemblies/: CHM1_1.0.json  CHM1_1.1.json  GRCh37.json  GRCh37.p10.json  GRCh37.p11.json  GRCh37.p12.json  GRCh37.p13.json  GRCh37.p2.json  GRCh37.p5.json  GRCh37.p9.json  GRCh38.json  GRCh38.p1.json  GRCh38.p10.json  GRCh38.p11.json  GRCh38.p12.json  GRCh38.p2.json  GRCh38.p3.json  GRCh38.p4.json  GRCh38.p5.json  GRCh38.p6.json  GRCh38.p7.json  GRCh38.p8.json  GRCh38.p9.json  Makefile  NCBI33.json  NCBI34.json  NCBI35.json  NCBI36.json
bioutils/_data/identifiers/: Makefile  convert-registry
doc/changelog/0.4/: 0.4.0.clog  0.4.0.rst  0.4.2.clog  0.4.2.rst  0.4.3.clog  0.4.4.rst
docs/: README.rst  getting-started.md  index.md
docs/changelog/0.4/: 0.4.0.clog  0.4.0.rst  0.4.1.clog  0.4.1.rst  0.4.2.clog  0.4.2.rst  0.4.3.clog  0.4.4.clog
docs/changelog/0.5/: 0.5.0.rst  0.5.3.rst  0.5.4.rst  0.5.5.rst  0.5.6.clog  0.5.6.rst  0.5.7.rst  0.5.8.rst  index.rst
docs/modules/: .nav.yml  bioutils.accessions.md  bioutils.assemblies.md  bioutils.coordinates.md  bioutils.cytobands.md  bioutils.digest.md  bioutils.digests.md  bioutils.exceptions.md  bioutils.normalize.md  bioutils.seqfetcher.md  bioutils.sequences.md  bioutils.vmc_digest.md
docs/source/: authors.rst  conf.py  index.rst  license.rst
docs/source/changelog/: index.rst
docs/source/changelog/0.4/: 0.4.0.rst  0.4.1.clog  0.4.1.rst  0.4.2.rst  0.4.3.rst  0.4.4.rst  index.rst
docs/source/changelog/0.5/: 0.5.0.clog  0.5.0.rst  0.5.1.clog  0.5.1.rst  0.5.2.clog  0.5.2.rst  0.5.3.clog  0.5.3.rst  0.5.4.clog  0.5.4.rst  0.5.5.clog  0.5.5.rst  0.5.7.clog  0.5.8.clog  Makefile  index.rst
docs/source/reference/: bioutils.accessions.rst  bioutils.assemblies.rst  bioutils.coordinates.rst  bioutils.cytobands.rst  bioutils.digest.rst  bioutils.digests.rst  bioutils.exceptions.rst  bioutils.normalize.rst  bioutils.rst  bioutils.seqfetcher.rst  bioutils.sequences.rst  bioutils.vmc_digest.rst  modules.rst
etc/: develop.reqs
sbin/: assembly-to-json  extract-makefile-documentation  generate-assembly-sql  makefile-extract-documentation  ucsc-cytoband-to-json
src/bioutils/: __init__.py  _versionwarning.py  accessions.py  assemblies.py  coordinates.py  cytobands.py  digest.py  digests.py  exceptions.py  normalize.py  seqfetcher.py  sequences.py  vmc_digest.py
src/bioutils/_data/: __init__.py
src/bioutils/_data/assemblies/: Makefile
tests/: conftest.py  test_normalize.py  test_seqfetcher.py  test_sequences.py
tests/data/cassettes/: test_fetch_ENST00000617537  test_fetch_ENST00000617537_env  test_fetch_ENST00000617537_environ  test_fetch_ENST00000617537_genomic  test_fetch_ENST00000617537_noenv  test_fetch_seq  test_fetch_seq_errors  test_fetch_seq_ncbi_invalid_positions
