[metadata]
# version is extracted from SCM tag by setuptools_scm
author = bioutils committers
description = "miscellaneous simple bioinformatics utilities and lookup tables"
home-page = https://github.com/biocommons/bioutils
name = bioutils

author-email = biocommons-dev@googlegroups.com
description-content-type = text/x-rst; charset=UTF-8
description-file = README.rst
license-file = LICENSE
platform = any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Healthcare Industry
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Medical Science Apps.
keywords =
    biocommons
    bioinformatics
    hgvs


[options]
packages = find:
python_requires = >= 3.5
zip_safe = true
package_dir =
    = bioutils
install_requires =
    requests
setup_requires =
    pytest-runner
    setuptools_scm
    wheel
tests_require =
    pytest
    pytest-cov
    pyyaml

[options.package_data]
* =
    _data/*/*.json.gz

# TODO: Needed?
[options.packages.find]
where = bioutils
exclude =
    __pycache__
    *.pyc

[options.extras_require]
dev =
    ipython
    pyyaml
    restview
    tox
    yapf


[aliases]
test = pytest

[bdist_wheel]
universal = 1

[build_sphinx]
all_files  = 1

# http://pep8.readthedocs.org/en/latest/intro.html#error-codes
[flake8]
max-line-length = 120
exclude = tests/*
max-complexity = 10
ignore = E129,E221,E241,E251,E303,W291

[tool:pytest]
doctest_optionflags = ALLOW_UNICODE ALLOW_BYTES ELLIPSIS IGNORE_EXCEPTION_DETAIL NORMALIZE_WHITESPACE
addopts = --doctest-modules --cov-config=setup.cfg --cov-report=term-missing --cov=vmc
testpaths = tests
