# See here:
# https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
# https://gist.github.com/althonos/6914b896789d3f2078d1e6237642c35c
# https://github.com/pyscaffold/pyscaffold/blob/master/setup.cfg

[metadata]
# version is extracted from SCM tag by setuptools_scm
author = bioutils committers
author-email = biocommons-dev@googlegroups.com
description = miscellaneous simple bioinformatics utilities and lookup tables
home-page = https://github.com/biocommons/bioutils
license-file = LICENSE.txt
long-description = file:README.rst
long-description-content-type = text/x-rst; charset=UTF-8
name = bioutils
platform = any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Healthcare Industry
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Medical Science Apps.
keywords =
    biocommons
    bioinformatics
    genomics
    hgvs
    variation


[options]
packages = find:
include_package_data = True
python_requires = >= 3.6
zip_safe = true
package_dir =
    = src
install_requires =
    attrs
    requests
setup_requires =
    pytest-runner
    setuptools_scm
    wheel

[options.package_data]
* =
    _data/*/*.json.gz

# TODO: Needed?
[options.packages.find]
where = src
exclude =
    __pycache__
    *.pyc

[options.extras_require]
dev =
    ipython>=7.5
    jupyter>=1.0
    restview
test =
    black
    flake8
    isort
    pytest
    pytest-cov
    pytest-optional-tests
    tox
    urllib3~=1.26
    vcrpy
    yapf
docs =
    sphinx


[aliases]
test = pytest

[bdist_wheel]
universal = 1

[build_sphinx]
all_files  = 1
source_dir = docs
build_dir = docs/_build

# http://pep8.readthedocs.org/en/latest/intro.html#error-codes
[flake8]
max-line-length = 120
exclude =
    tests/*
    .tox
    build
    dist
    .eggs
    docs/conf.py
max-complexity = 10
ignore = E129,E221,E241,E251,E303,W291

[tool:pytest]
addopts = --cov-config=setup.cfg --cov-report term-missing --cov=bioutils   --doctest-modules --doctest-glob='*.rst'  --strict-markers
# collect_ignore = setup.py
doctest_optionflags = ALLOW_UNICODE ALLOW_BYTES ELLIPSIS IGNORE_EXCEPTION_DETAIL NORMALIZE_WHITESPACE
norecursedirs =
  _data
  dist
  build
  .tox
testpaths = src tests
markers =
    network
#optional_tests =
#  network: run network tests

[tool:isort]
profile = black
