[options]
include_package_data = True
packages = find_namespace:
package_dir =
    = src
zip_safe = True

install_requires =
    attrs
    requests
    urllib3~=1.26


[options.entry_points]
#console_scripts =
#    marvin-quote = biocommons.example.__main__:main

[options.extras_require]
dev =
    bandit~=1.7
    black~=22.3
    build~=0.8
    flake8~=4.0
    ipython~=8.4
    isort~=5.10
    mypy
    pylint~=2.14
test =
    pytest~=7.1
    pytest-cov~=4.0
    pytest-optional-tests
    tox~=3.25
    vcrpy
docs = 
    mkdocs

[options.packages.find]
where = src
exclude =
    __pycache__
    *.pyc

[options.package_data]
* =
    _data/*/*.json.gz

[flake8]
ignore = E129,E133,E203,E221,E241,E251,E303,E266,H106,H904,W291
max-line-length = 120
max-complexity = 15
hang-closing = true
exclude =
    .eggs
    .tox
    build
    dist
    docs/conf.py
    tests/*
